[gd_scene load_steps=18 format=3 uid="uid://d3gg0p2wovrok"]

[ext_resource type="Script" path="res://components/sheep.gd" id="1_mv75l"]
[ext_resource type="Texture2D" uid="uid://biqhi44bl03x0" path="res://resources/sheep_walk.png" id="2_c7a1w"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_soybp"]
radius = 8.0
height = 28.0

[sub_resource type="CircleShape2D" id="CircleShape2D_etphd"]
radius = 26.0192

[sub_resource type="Animation" id="Animation_wqa5y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_pntfo"]
resource_name = "walk_down"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_4o11w"]
resource_name = "walk_left"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_lm0lx"]
resource_name = "walk_right"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_3frca"]
resource_name = "walk_up"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g3udu"]
_data = {
"RESET": SubResource("Animation_wqa5y"),
"walk_down": SubResource("Animation_pntfo"),
"walk_left": SubResource("Animation_4o11w"),
"walk_right": SubResource("Animation_lm0lx"),
"walk_up": SubResource("Animation_3frca")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_exv4c"]
animation = &"walk_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_txjnb"]
animation = &"walk_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_x5nwb"]
animation = &"walk_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hd207"]
animation = &"walk_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_y1yyh"]
blend_point_0/node = SubResource("AnimationNodeAnimation_exv4c")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_txjnb")
blend_point_1/pos = Vector2(0, -0.9)
blend_point_2/node = SubResource("AnimationNodeAnimation_x5nwb")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_hd207")
blend_point_3/pos = Vector2(1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ccih2"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_yfews"]
states/End/position = Vector2(1071, 157)
states/Start/position = Vector2(191, 168)
states/walk/node = SubResource("AnimationNodeBlendSpace2D_y1yyh")
states/walk/position = Vector2(396, 168)
transitions = ["Start", "walk", SubResource("AnimationNodeStateMachineTransition_ccih2")]

[node name="Sheep" type="CharacterBody2D"]
script = ExtResource("1_mv75l")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_soybp")

[node name="threat_zone" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="threat_zone"]
shape = SubResource("CircleShape2D_etphd")

[node name="friend_zone" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="friend_zone"]
shape = SubResource("CircleShape2D_etphd")

[node name="Behave_Timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_g3udu")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_c7a1w")
hframes = 4
vframes = 4

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_yfews")
anim_player = NodePath("../AnimationPlayer")
parameters/walk/blend_position = Vector2(0.0953895, -0.558528)

[connection signal="area_shape_entered" from="threat_zone" to="." method="_on_threat_entered"]
[connection signal="area_shape_exited" from="threat_zone" to="." method="_on_threat_exited"]
[connection signal="area_shape_entered" from="friend_zone" to="." method="_on_threat_entered"]
[connection signal="area_shape_exited" from="friend_zone" to="." method="_on_threat_exited"]
[connection signal="timeout" from="Behave_Timer" to="." method="_on_behave_timer_timeout"]
